--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,16 +4,18 @@ WORKDIR /src
 
 COPY requirements.txt .
 
-RUN pip install -r requirements.txt -I
+# Use python -m pip because pip is not on PATH in this image (conda-based)
+RUN python -m pip install --upgrade pip \
+ && python -m pip install -r requirements.txt -I
 
-RUN pip install jupyterlab
+RUN python -m pip install jupyterlab
 
-# Add Tini. Tini operates as a process subreaper for jupyter. This prevents kernel crashes.
-ENV TINI_VERSION v0.6.0
+# Add Tini. Tini operates as a process subreaper for jupyter.
+ENV TINI_VERSION=v0.6.0
 ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /usr/bin/tini
 RUN chmod +x /usr/bin/tini
 
-# copy the code instead of mounting
+# Copy the code instead of mounting
 COPY . .
 
 ENTRYPOINT ["/usr/bin/tini", "--"]
