--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,9 @@
 name: Run Tests!
 
-on:
-  schedule:
-    - cron: "0 6 * * *"
+push:
+    branches: [ master ]
+  pull_request:
+  workflow_dispatch:
 
 jobs:
   tests:
