Update  complete Dockerfile added pip install first

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,9 +2,13 @@ FROM stablebaselines/rl-baselines3-zoo
 
 WORKDIR /src
 
+# Install pip for system python3 (fixes: /usr/bin/python3: No module named pip)
+RUN apt-get update \
+ && apt-get install -y --no-install-recommends python3-pip \
+ && rm -rf /var/lib/apt/lists/*
+
 COPY requirements.txt .
 
-# Use python3 -m pip because pip is not on PATH in this image (conda-based)
 RUN python3 -m pip install --upgrade pip \
  && python3 -m pip install -r requirements.txt -I
 
