Update Dockerfile fixed permission denied issue

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,10 +2,16 @@ FROM stablebaselines/rl-baselines3-zoo
 
 WORKDIR /src
 
-# Install pip for system python3 (fixes: /usr/bin/python3: No module named pip)
+# Switch to root to install system packages
+USER root
+
+# Install pip for system python3
 RUN apt-get update \
  && apt-get install -y --no-install-recommends python3-pip \
  && rm -rf /var/lib/apt/lists/*
+
+# Switch back to default user
+USER sb3
 
 COPY requirements.txt .
 
@@ -19,7 +25,6 @@ ENV TINI_VERSION=v0.6.0
 ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /usr/bin/tini
 RUN chmod +x /usr/bin/tini
 
-# Copy the code instead of mounting
 COPY . .
 
 ENTRYPOINT ["/usr/bin/tini", "--"]
