--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,23 +2,18 @@ FROM stablebaselines/rl-baselines3-zoo
 
 WORKDIR /src
 
-USER root
-
-RUN apt-get update \
- && apt-get install -y --no-install-recommends python3-pip \
- && rm -rf /var/lib/apt/lists/*
-
 COPY requirements.txt .
 
-RUN python3 -m pip install --upgrade pip \
- && python3 -m pip install -r requirements.txt -I
+RUN pip install -r requirements.txt -I
 
-RUN python3 -m pip install jupyterlab
+RUN pip install jupyterlab
 
-ENV TINI_VERSION=v0.6.0
+# Add Tini. Tini operates as a process subreaper for jupyter. This prevents kernel crashes.
+ENV TINI_VERSION v0.6.0
 ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /usr/bin/tini
 RUN chmod +x /usr/bin/tini
 
+# copy the code instead of mounting
 COPY . .
 
 ENTRYPOINT ["/usr/bin/tini", "--"]
